Fixed alignment issues in property inspector

--- a/pi/sdpi.css
+++ b/pi/sdpi.css
@@ -325,7 +325,7 @@ html {
   .sdpi-item-label {
     text-align: right;
     flex: none;
-    width: 94px;
+    width: 90px;
     padding-right: 4px;
     font-weight: 600;
     -webkit-user-select: none;
